--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,89 +1,98 @@
 .header {
 	display: flex;
-	flex-direction: row;
 	justify-content: space-between;
+	gap: 0.5rem;
 
-	> a {
+	background: var(--primary-bg);
+	border-radius: 1rem;
+	box-shadow: 0 0 0.5rem var(--orange);
+	width: 70%;
+	max-width: 100%;
+	height: 3rem;
+	white-space: nowrap;
+
+	.logo {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		border-radius: 1rem;
+		min-width: 3rem;
 
 		> img {
-			height: 100%;
-			width: auto;
-			max-width: 100%;
+			width: 100%;
+			height: auto;
+			max-height: 90%;
 		}
+
+		&:hover {
+			background: var(--orangeHover);
+		}
+	}
+}
+
+.links {
+	flex: 1;
+	display: flex;
+	align-items: center;
+	justify-content: safe end;
+
+	> * {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+
+		padding: 0 0.5rem;
+		border-radius: 1rem;
+		height: 100%;
+		width: auto;
+		aspect-ratio: 1;
 
 		&:hover {
 			background: var(--orangeHover);
 			text-decoration: underline;
 		}
 	}
+}
 
-	> .links {
+.player {
+	display: flex;
+	gap: 0.5rem;
+	position: relative;
+	color: var(--orange);
+
+	img {
+		border-radius: 50%;
+		border: 0.1rem solid var(--foreground);
+		height: 80%;
+		width: auto;
+	}
+
+	&:hover .profile-links {
 		display: flex;
-		align-items: center;
-		justify-content: center;
+		flex-direction: column;
+		position: absolute;
+	}
+
+	.profile-links {
+		display: none;
+		z-index: 10;
+		top: 100%;
+		right: 0;
+		width: max-content;
+
+		border: 0.1rem solid var(--orange);
+		border-radius: 1rem;
+		background-color: rgb(170, 118, 22);
 
 		> * {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			padding: 0 1rem;
-			height: 100%;
-			border-radius: 1rem;
-
-			&:hover {
-				background: var(--orangeHover);
-				text-decoration: underline;
-			}
+			padding: 0.2rem 0.5rem;
+			text-align: end;
+			color: var(--foreground);
 		}
 
-		> .player {
-			position: relative;
+		a:hover {
 			color: var(--orange);
-
-			&:hover {
-				.profile {
-					visibility: visible;
-				}
-			}
-
-			> img {
-				border-radius: 50%;
-				border: 0.1rem solid var(--foreground);
-				margin-right: 1rem;
-				height: 80%;
-				width: auto;
-			}
-
-			> .profile {
-				z-index: 10;
-				visibility: hidden;
-				position: absolute;
-				top: 100%;
-				width: max-content;
-				max-width: 300%;
-				display: flex;
-				flex-direction: column;
-
-				border: 0.1rem solid var(--orange);
-				border-radius: 1rem;
-				background-color: var(--content-block-bg);
-
-				> * {
-					text-align: center;
-					overflow: scroll;
-					padding: 0.1rem 1rem;
-					color: var(--foreground);
-					width: 100%;
-				}
-
-				> a:hover {
-					color: var(--orange);
-				}
-			}
 		}
 	}
 }
@@ -98,14 +107,12 @@
 	outline: none;
 }
 
-@media (max-width: 768px) {
-	.header > .links > * {
-		padding: 0 0.3rem;
-	}
+.orange-color {
+	color: var(--orange);
 }
 
-@media (max-width: 480px) {
-	.profile {
-		right: 0;
+@media (max-width: 768px) {
+	.header {
+		width: 100%;
 	}
 }
