--- a/src/app/game/blackjack/blackjack.module.scss
+++ b/src/app/game/blackjack/blackjack.module.scss
@@ -1,13 +1,18 @@
-.jackField {
+.hand {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+
 	> div {
 		display: flex;
-		flex-direction: column;
-		align-items: center;
+		justify-content: safe center;
+		overflow-x: auto;
+
+		padding: 0 1rem;
 
 		> div {
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
+			margin-right: -1rem;
+			margin-left: -1rem;
 		}
 	}
 }
