--- a/src/app/game/miner/miner.module.scss
+++ b/src/app/game/miner/miner.module.scss
@@ -1,86 +1,82 @@
-.minerField {
+.bomb-picker {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
-	justify-content: space-evenly;
+	justify-content: safe center;
+	gap: 0.5rem;
 
-	> div {
-		margin: 0 1rem;
+	overflow-x: auto;
+
+	> button {
+		flex: 1;
 	}
 
-	> .bombsPicker {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		width: 20%;
+	> h2 {
 		white-space: nowrap;
-
-		> button {
-			width: 100%;
-			margin: 0.5rem;
-		}
 	}
+}
 
-	> .gameField {
+.gameField {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 0.3rem;
+	width: 100%;
+	max-width: 30rem;
+	aspect-ratio: 1;
+
+	.row {
 		display: flex;
-		flex-direction: column;
-		align-items: center;
 		justify-content: center;
-		width: auto;
+		gap: 0.3rem;
+		height: 20%;
+		width: 100%;
 
-		> .row {
+		.cell {
 			display: flex;
+			align-items: center;
 			justify-content: center;
-			height: 5rem;
-			width: 100%;
+			width: 20%;
+			border-radius: 0.5rem;
+			border: 0.1rem solid var(--orangeDark);
+			background-color: var(--orange);
+			cursor: pointer;
+			background-size: 40%;
+			background-position: center;
+			background-repeat: no-repeat;
+			transition: 0.2s;
 
-			> .cell {
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: 5rem;
-				border-radius: 0.5rem;
-				border: 0.2rem solid var(--orangeDark);
-				background-color: var(--orange);
-				margin: 0.1rem;
-				cursor: pointer;
-				background-size: 40%;
-				background-position: center;
-				background-repeat: no-repeat;
-				transition: 0.2s;
-
-				&:disabled {
-					cursor: not-allowed;
-				}
-
-				&:hover {
-					transform: scale(1.1);
-				}
+			&:disabled {
+				cursor: not-allowed;
 			}
 
-			> .picked {
-				background-image: url(../../../assets/miner/diamond.svg);
-				opacity: 0.6;
-				animation: flip 0.5s;
-			}
-
-			> .bomb {
-				background-image: url(../../../assets/miner/bomb.svg);
-				opacity: 0.6;
-				animation: flip 0.5s;
-			}
-
-			> .wasPicked {
-				opacity: 0.2;
-			}
-
-			.picked:hover,
-			.bomb:hover,
-			.wasPicked:hover {
-				transform: none;
+			&:hover {
+				transform: scale(1.1);
 			}
 		}
 	}
+}
+
+.picked {
+	background-image: url(../../../assets/miner/diamond.svg);
+	opacity: 0.6;
+	animation: flip 0.5s;
+}
+
+.bomb {
+	background-image: url(../../../assets/miner/bomb.svg);
+	opacity: 0.6;
+	animation: flip 0.5s;
+}
+
+.wasPicked {
+	opacity: 0.2;
+}
+
+.picked:hover,
+.bomb:hover,
+.wasPicked:hover {
+	transform: none;
 }
 
 @keyframes flip {
@@ -92,16 +88,5 @@
 	}
 	100% {
 		transform: rotateY(0);
-	}
-}
-
-@media (max-width: 1200px) {
-	.minerField {
-		flex-direction: column;
-
-		> .bombsPicker {
-			flex-direction: row;
-			width: auto;
-		}
 	}
 }
