--- a/src/app/game/roulette/roulette.module.scss
+++ b/src/app/game/roulette/roulette.module.scss
@@ -1,77 +1,102 @@
-.container {
+.block {
 	display: flex;
-	flex-direction: column;
+	justify-content: space-evenly;
 	align-items: center;
+	gap: 0.5rem;
 	width: 100%;
-	min-height: 100%;
-	overflow: hidden;
 
-	.betMaker {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		width: 100%;
-
-		> div {
-			width: 33%;
-			margin: 0.5rem 0;
-
-			> ul {
-				border-radius: 0.5rem;
-				margin-top: 0.3rem;
-				padding: 0.5rem;
-				text-align: start;
-				list-style-type: none;
-				border: 0.1rem solid var(--orange);
-
-				> * {
-					padding: 0.1rem 1rem;
-					display: flex;
-					justify-content: space-between;
-
-					> span {
-						display: flex;
-
-						> button {
-							padding: 0 0.2rem;
-							margin-left: 0.2rem;
-							cursor: pointer;
-						}
-					}
-				}
-			}
-		}
+	// last-spins
+	> *:last-child {
+		flex: 1;
+		min-width: 50%;
+		height: 100%;
 	}
 }
 
-.block {
+.last-spins {
 	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
 	align-items: center;
-	width: 100%;
-	border: 0.1rem solid var(--orange);
-	border-radius: 1rem;
-}
-
-.lastSpins {
-	display: flex;
-	flex-direction: row;
 	justify-content: safe center;
-	overflow: hidden;
-	max-width: 50%;
+	gap: 0.5rem;
+
+	padding: 0.5rem;
 	color: white;
+	border: 0.1rem solid var(--orange);
+	border-radius: 0.5rem;
+
+	overflow-x: auto;
 
 	> div {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		margin: 0.5rem 0.2rem;
-		border: 0.1rem solid var(--primary-border);
-		border-radius: 50%;
+
 		min-width: 2.5rem;
 		min-height: 2.5rem;
+		border: 0.1rem solid var(--primary-border);
+		border-radius: 0.5rem;
 		font-size: 0.8rem;
+	}
+}
+
+.betMaker {
+	display: flex;
+	gap: 0.5rem;
+	width: 100%;
+
+	> div {
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		gap: 0.5rem;
+		overflow-x: hidden;
+	}
+}
+
+.bets-list {
+	border: 0.1rem solid var(--orange);
+	border-radius: 0.5rem;
+	padding: 0.5rem;
+
+	p {
+		overflow-x: auto;
+	}
+
+	p,
+	li {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: 0.5rem;
+
+		padding: 0.5rem;
+		white-space: nowrap;
+	}
+
+	ul {
+		display: flex;
+		flex-direction: column;
+		list-style-type: none;
+		overflow-x: auto;
+
+		li {
+			.bet-amount {
+				flex: 1;
+				display: flex;
+				align-items: center;
+				justify-content: end;
+				gap: 0.5rem;
+			}
+
+			button {
+				border-radius: 50%;
+				border: none;
+				cursor: pointer;
+				min-width: 1rem;
+				height: 1rem;
+				background-color: var(--orange);
+			}
+		}
 	}
 }
 
@@ -95,27 +120,12 @@
 	color: #ffffff60;
 }
 
-.connectionType {
-	border-radius: 1rem;
-	padding: 0.1rem 1rem;
-	margin: 0.2rem;
-	width: fit-content;
-	border: 0.1rem solid rgb(193, 2, 2);
-	background-color: rgb(249, 49, 49);
-	color: white;
+// @media (max-width: 1200px) {
+// 	.block {
+// 		flex-direction: column;
+// 	}
 
-	&.success {
-		border: 0.1rem solid rgb(55, 233, 55);
-		background-color: rgba(17, 198, 17, 0.911);
-	}
-}
-
-@media (max-width: 1200px) {
-	.block {
-		flex-direction: column;
-	}
-
-	.lastSpins {
-		max-width: 100%;
-	}
-}
+// 	.lastSpins {
+// 		max-width: 100%;
+// 	}
+// }
