--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,6 +15,10 @@
 	--rouletteGreen: #00c74d;
 	--rouletteRed: #f95146;
 	--rouletteBlack: #2d3035;
+
+	--rouletteGreenDark: #00c74ca0;
+	--rouletteRedDark: #f95146a0;
+	--rouletteBlackDark: #2d3035a0;
 }
 
 [data-theme='light'] {
@@ -30,7 +34,19 @@
 }
 
 *::-webkit-scrollbar {
-	display: none;
+	height: 0.5rem;
+	width: 0.5rem;
+}
+
+*::-webkit-scrollbar-track {
+	background-color: transparent;
+	border: 1px solid var(--orange);
+	border-radius: 0.5rem;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: var(--orange);
+	border-radius: 0.5rem;
 }
 
 * {
@@ -46,7 +62,7 @@ body {
 }
 
 html {
-	font-size: 20px;
+	font-size: 16px;
 }
 
 hr {
@@ -64,165 +80,23 @@ a.linkBtn {
 	border: 0.1rem solid var(--orange);
 	border-radius: 0.5rem;
 	padding: 0.5rem;
+	text-align: center;
 
 	&:hover {
 		background: #f87d0950;
 	}
 }
 
-footer {
-	text-align: center;
-
-	> nav {
-		margin-top: 0.5rem;
-
-		> a {
-			margin: 0 0.5rem;
-
-			> img {
-				max-width: 2rem;
-				height: auto;
-			}
-		}
-	}
-}
-
 body {
-	width: 100vw;
-	height: 100vh;
-	color: var(--foreground);
-	background: var(--background);
-	padding: 0.5rem;
-
-	> header {
-		width: 70%;
-		height: 3rem;
-		background: var(--primary-bg);
-		border: 0.1rem solid var(--primary-border);
-		border-radius: 1rem;
-		margin: auto;
-	}
-
-	> div {
-		height: calc(100% - 3rem);
-		display: flex;
-		flex-direction: row;
-		padding-top: 0.5rem;
-
-		> nav.sidenav {
-			width: 4rem;
-			background: var(--primary-bg);
-			border: 0.1rem solid var(--primary-border);
-			border-radius: 1rem;
-			margin: auto;
-		}
-
-		> div {
-			margin-left: 0.5rem;
-			width: 100%;
-			height: 100%;
-			border-radius: 1rem;
-			overflow-x: scroll;
-
-			> main {
-				display: flex;
-				min-height: 100%;
-				margin-bottom: 0.5rem;
-				text-align: center;
-			}
-
-			> main,
-			footer {
-				padding: 0.5rem;
-				background: var(--primary-bg);
-				border: 0.1rem solid var(--primary-border);
-				border-radius: 1rem;
-			}
-		}
-	}
-}
-
-.gamePage {
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-	min-height: 100%;
-
-	> div:first-child {
-		margin-right: 0.5rem;
-		width: 70%;
-		overflow: scroll;
-	}
-
-	> div:last-child {
-		width: 30%;
-	}
-}
-
-.page {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 100%;
-	min-height: 100%;
-}
+	gap: 0.5rem;
 
-@media (max-width: 1200px) {
-	html {
-		font-size: 18px;
-	}
+	width: 100vw;
+	height: 100vh;
+	padding: 0.5rem;
 
-	.gamePage {
-		flex-direction: column-reverse;
-		height: 100%;
-
-		> div:first-child,
-		div:last-child {
-			width: 100%;
-		}
-	}
-}
-
-@media (max-width: 900px) {
-	html {
-		font-size: 16px;
-	}
-}
-
-@media (max-width: 768px) {
-	html {
-		font-size: 14px;
-	}
-
-	body {
-		> header {
-			width: 80%;
-		}
-	}
-}
-
-@media (max-width: 480px) {
-	html {
-		font-size: 12px;
-	}
-
-	body {
-		> header {
-			width: 100%;
-		}
-
-		> div {
-			flex-direction: column;
-
-			> nav.sidenav {
-				width: 100%;
-				flex-direction: row;
-				margin-bottom: 0.5rem;
-			}
-
-			> div {
-				margin: 0;
-			}
-		}
-	}
+	color: var(--foreground);
+	background: var(--background);
 }
