--- a/src/components/BetsTable/BetsTable.module.scss
+++ b/src/components/BetsTable/BetsTable.module.scss
@@ -1,54 +1,25 @@
-.container {
-	text-align: center;
+.tbl {
+	border-collapse: collapse;
+	border-radius: 0.5rem;
+	background: var(--primary-border);
+	white-space: nowrap;
 
-	> table {
-		padding: 0.5rem;
-		margin: 0.5rem;
-		border-collapse: separate;
-		border-radius: 1rem;
-		background: var(--primary-border);
-		max-width: 100%;
+	max-width: 100%;
+	display: block;
+	overflow-x: auto;
+	box-shadow: 0 0 0.5rem var(--orange);
 
-		> thead > tr > td {
-			background: var(--content-block-bg);
-			border-radius: 1rem;
-			text-align: center;
-		}
-
-		td {
-			padding: 0.2rem 1rem;
-		}
-
-		a:hover {
-			color: var(--orange);
-		}
+	th {
+		border-bottom: 2px solid var(--orange);
+		background: var(--content-block-bg);
 	}
-}
 
-@media (max-width: 1200px) {
-	.container > table {
-		td {
-			padding: 0.2rem 0.5rem;
-		}
+	th,
+	td {
+		padding: 0.2rem 0.5rem;
 	}
-}
 
-@media (max-width: 768px) {
-	.container > table {
-		font-size: 10px;
-
-		td {
-			padding: 0.2rem;
-		}
-	}
-}
-
-@media (max-width: 480px) {
-	.container > table {
-		font-size: 8px;
-
-		td {
-			padding: 0.1rem;
-		}
+	a:hover {
+		color: var(--orange);
 	}
 }
