--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,15 +1,27 @@
 .sidebar {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: safe center;
+
+	min-width: 4rem;
+	max-width: 4rem;
+	max-height: 100%;
+
+	overflow-y: auto;
+
+	background: var(--primary-bg);
+	border-radius: 1rem;
+	box-shadow: 0 0 0.5rem var(--orange);
 
 	a {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		border-radius: 1rem;
+
 		width: 100%;
-		height: 4rem;
+		min-height: 4rem;
+
+		border-radius: 1rem;
 
 		img {
 			width: 60%;
@@ -23,6 +35,21 @@
 				width: 70%;
 				height: 70%;
 			}
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.sidebar {
+		flex-direction: row;
+		overflow-x: auto;
+
+		min-width: 100%;
+		min-height: 3rem;
+		max-height: 3rem;
+
+		a {
+			min-height: 3rem;
 		}
 	}
 }
